# docs/swagger/swagger.yaml
@@ -2729,16 +2729,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/internal_handlers.SendEmailRequest'
-      - description: API Key
-        in: header
-        name: X-API-Key
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
       produces:
       - application/json
       responses:
